# backend/src/routes/transaction.routes.ts
@@ -5,5 +5,6 @@ const router = Router();
 
 router.get('/list', (req, res) => transactionController.listTransactions(req, res));
 router.get('/incident', (req, res) => transactionController.listIncidents(req, res));
+router.get('/:id', (req, res) => transactionController.getTransactionById(req, res));
 
 export default router;
